<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tap and Count</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <item type="integer" format="integer" name="count_number">0</item>
    <string name="button_clear_history">Clear History</string>
    <string name="text_clear_history">Clear All Counts</string>
    <string name="text_background_color">Background Color</string>
    <string name="count_value">0</string>
    <string name="text_multitouch">Multi-Touch Recognition</string>
    <string name="text_allow_multitouch">Allow Multi-Touch</string>
    <string name="text_decrease_count">Decrease Count</string>
    <string name="text_save_count">Save Count</string>
    <string name="action_history">History</string>
    <string name="action_count">Count</string>
    <string name="app_history"> Tap and Count History</string>
    <string name="app_settings">Tap and Count Settings</string>
    <string name="text_extrabuttons">Show Extra Buttons</string>
    <string name="text_otheroptions">Other Options</string>
    <string name="decrement">Decrement</string>
    <string name="save_count">Save Count</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="action_load_count">Load Count</string>
    <string name="about_app">About App</string>
    <string-array name="history_options">
        <item>Edit Title</item>
        <item>Delete Count</item>
        <item>Load Count</item>
    </string-array>

</resources>
