<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/counting_layout" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    android:orientation="vertical"
    android:onClick="increment" >

    <TextView android:id="@+id/countValueId" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/count_value"
        android:textSize="50dp" />

    <LinearLayout 
        android:id="@+id/counting_buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >
        
        	<Button 
	        android:id="@+id/button_decrement"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
			android:text="@string/decrement"
			android:onClick="decrement"
			android:visibility="gone"/>
        
	    	<Button 
		        android:id="@+id/button_save"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="15dp"
		        android:layout_marginRight="15dp"
				android:text="@string/save_count"
				android:onClick="save"
				android:visibility="gone" />
	    
    </LinearLayout>
    
</RelativeLayout>
